Bug fix on QuizService.java to not duplicate MCQs for each Quiz ID, to deploy with frontend Completed History